<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen

    xmlns:android="http://schemas.android.com/apk/res/android"
    android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="relic_app_settings">

<PreferenceCategory app:title="@string/theme_header">

    <ListPreference
        android:defaultValue="false"
        android:entries="@array/lion_themes_entries"
        android:entryValues="@array/lion_themes_values"
        android:key="list_preference_1"
        android:title="@string/dark_theme"
        app:defaultValue="a"
        app:iconSpaceReserved="false" />
</PreferenceCategory>

    <PreferenceCategory
        app:enabled="true"

        app:iconSpaceReserved="false"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="@string/pref_sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:iconSpaceReserved="false"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="true"
        app:title="@string/more_options">
        <Preference

            app:icon="@drawable/splash_light"

            app:key="pref_view_code"
            app:title="@string/view_code">
            <intent
                app:action="android.intent.action.VIEW"
                app:data="https://github.com/kosiken/TodoApp" />
        </Preference>

        <Preference
            app:icon="@drawable/ic_external_link"
            app:key="pref_visit_web"
            app:title="@string/visit_web">
            <intent
                app:action="android.intent.action.VIEW"
                app:data="http://relicinnova.com.ng" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
