<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.allisonkosy.todoapp.HomeFragment"
        android:label="Todo App"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_connectDesktopFragment"
            app:destination="@id/connectDesktopFragment"


            />
        <action
            android:id="@+id/action_homeFragment_to_todoEditFragment"
            app:destination="@id/todoEditFragment" />
        <action
            android:id="@+id/action_homeFragment_to_deleteTodoFragment"
            app:destination="@id/deleteTodoFragment" />
    </fragment>
    <fragment
        android:id="@+id/connectDesktopFragment"
        android:name="com.allisonkosy.todoapp.ConnectDesktopFragment"
        android:label="@string/connect_desktop"
        tools:layout="@layout/connect_desktop2_fragment" >
        <action
            android:id="@+id/action_connectDesktopFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_connectDesktopFragment_to_todoEditFragment"
            app:destination="@id/todoEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.allisonkosy.todoapp.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_connectDesktopFragment"
            app:destination="@id/connectDesktopFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_todoEditFragment"
            app:destination="@id/todoEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/todoEditFragment"
        android:name="com.allisonkosy.todoapp.TodoEditFragment"
        android:label="@string/edit_todo"
        tools:layout="@layout/fragment_todo_edit" >
        <action
            android:id="@+id/action_todoEditFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/deleteTodoFragment"
        android:name="com.allisonkosy.todoapp.DeleteTodoFragment"
        android:label="@string/delete_todo"
        tools:layout="@layout/fragment_delete" >
        <action
            android:id="@+id/action_deleteTodoFragment_to_homeFragment2"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>

